paralax extra margin fix

--- a/src/common-components/TempComponenet/TempComponent.css
+++ b/src/common-components/TempComponenet/TempComponent.css
@@ -15,4 +15,7 @@
     .temp-comp-wrapper-span{ 
         font-size: 40px;
     }
+    .temp-comp-wrapper{ 
+        height: fit-content;
+    }
 }
